UX: Fix input alignment following core changes

--- a/assets/stylesheets/assigns.scss
+++ b/assets/stylesheets/assigns.scss
@@ -147,10 +147,6 @@
   }
 }
 
-.topic-search-div {
-  margin-left: 1em;
-}
-
 .assigned-to.discourse-tag.simple {
   color: var(--primary-medium);
 }
